--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -211,8 +211,8 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background-image: url("../img/Untitled.jpg");
-  /*background-size: cover;*/
+  background-image: url("../img/hero-bg3.jpg");
+  background-size: cover;
 }
 
 #hero:before {
